--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS styl  
   intl: ^0.17.0
+  http: ^0.13.4
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
